# humanoid_sensors_actuators

hsa_t1s1_ws/: DOCUMENTS_REFERENCE.md
hsa_t1s1_ws/src/gpio_asm/src/applications/: main_asm_blink.S  main_asm_blink3.S  main_asm_blink3_eff.S  main_asm_mirror.S
hsa_t1s1_ws/src/gpio_c/src/applications/: main_blink.c  main_blink3.c  main_mirror.c
hsa_t1s2_ws/: CMakeLists.txt
hsa_t1s2_ws/.devcontainer/: devcontainer.json
hsa_t1s2_ws/hex/: uart_512bit_adder.hex  uart_echo.hex  uart_hello_world.hex
hsa_t1s2_ws/src/uart/: .gitignore  CMakeLists.txt  uart.py
hsa_t1s2_ws/src/uart/src/applications/: main_uart_echo.c  main_uart_hello_world.c
hsa_t1s2_ws/src/uart_512bit_adder/: CMakeLists.txt  uart.py
hsa_t2s2_ws/: CMakeLists.txt  readme.md
hsa_t2s2_ws/.devcontainer/: devcontainer.json
hsa_t2s2_ws/src/adc_poti/: .gitignore  CMakeLists.txt  log.py
hsa_t2s2_ws/src/adc_poti/src/applications/: main_adc_poti.c  main_adc_uart.c
hsa_t2s2_ws/src/adc_rcsc/: .gitignore  CMakeLists.txt  ftdi_tools.py  log.py  plot.py
hsa_t2s2_ws/src/adc_rcsc/src/applications/: main_adc_rcsc.c
hsa_t2s2_ws/src/timer/: CMakeLists.txt
hsa_t2s2_ws/src/timer/src/applications/: main_timer_blink.c  main_timer_pwm_adc.c  main_timer_servo_sensor.c
